Apply modern Java patterns (Java 9–21) across codebase
- Java 17: Convert TagFilter abstract class to sealed interface
- Java 16: Convert HasTag, DoesNotHaveTag, HasOneOfTags to records
- Java 21: Replace 3-pass stream + unchecked casts in JdbcTagQueryTranslator
           with a single pattern matching switch over the sealed TagFilter type
- Java 15: Use String.formatted() in BlobPublicUrl and JdbcTagQueryTranslator
- Java 11: Use Predicate.not() in StringToTagFilterQueryConverter
- Java 10: Remove double-brace HashMap init in QueryHandlerJdbc; use var
- Java  9: Replace Collections.singletonMap() with Map.of() in exception handler
- Java 16: Replace Collectors.toList() with .toList() in CommandValidator
- Update StringToTagFilterQueryConverterTest: f.value → f.value(),
  getClass().equals() → instanceof

https://claude.ai/code/session_01MmggYomPzXxzdwyTm1a7r2